# france-opendata

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: catalogue.md
france_opendata/: __init__.py  _http.py  _opendatasoft.py  acco.py  acco_ingest.py  aides.py  apicarto.py  ban.py  bdtopo.py  boamp.py  boamp_ingest.py  bodacc.py  cedh.py  cjue.py  culture_spectacle.py  dpe.py  dvf.py  egapro.py  enedis.py  entreprises.py  epfif.py  finance.py  finess.py  frenchtech.py  geo.py  georisques.py  gpu.py  has_essms.py  ign.py  inpi.py  insee_iris.py  insee_iris_ingest.py  insee_melodi.py  jade_live.py  judilibre.py  juri.py  juri_ingest.py  kali.py  kali_ingest.py  legi.py  (+10 more)
france_opendata/data/: iris_2021.parquet
tests/: test_aides.py  test_apicarto.py  test_bodacc.py  test_insee_iris.py  test_insee_melodi_retry.py  test_juri.py  test_kali.py  test_legi.py  test_sirene_stock_hardening.py
tests/fixtures/: juri_cass.xml  juri_cnil.xml  kali_article.xml  kali_conteneur.xml  legi_article.xml
