[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "france-opendata"
version = "0.14.0"
description = "Connecteurs Python data publique France (open data) : entreprises (Recherche Entreprises, Sirene, INPI bilans, BODACC), marchés publics (BOAMP), immobilier (DVF+ Cerema), foncier/cadastre/urbanisme (BAN, API Carto, BDTOPO, Sit@del, GPU, QPV, Géorisques, EPFIF), énergie (Enedis, PVGIS), socio-démo (INSEE Mélodi), culture, santé (FINESS, ESSMS HAS). Sans clé sauf Sirene. Détail : README."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
# Reader local de la stock SIRENE (parquet INSEE via DuckDB) — france_opendata.sirene_stock.
# Lourd, donc à la carte : `france-opendata[stock]`. Sans cet extra, seuls les clients API
# (sans clé / clé Sirene) sont disponibles.
stock = ["duckdb>=1.1"]
# Évaluations ESSMS HAS (DuckDB sur parquet distant httpfs) — france_opendata.has_essms.
sante = ["duckdb>=1.1"]

[tool.setuptools.packages.find]
include = ["france_opendata*"]
